jvector-native/src/main/c/jvector_simd.h

JVECTOR_SIMD_API void calculate_partial_sums_euclidean_f32(const float* codebook, int codebookBase, size_t size, int clusterCount, const float* query, int queryOffset, float* partialSums);
JVECTOR_SIMD_API void calculate_partial_sums_self_magnitude_f32(const float* codebook, int codebookBase, size_t size, int clusterCount, float* partialSums);
/* NVQ kernels */
JVECTOR_SIMD_API void    nvq_quantize_8bit(const float* vector, size_t length, float alpha, float x0, float minValue, float maxValue, unsigned char* destination);
JVECTOR_SIMD_API float   nvq_loss(const float* vector, size_t length, float alpha, float x0, float minValue, float maxValue, int nBits);
JVECTOR_SIMD_API float   nvq_uniform_loss(const float* vector, size_t length, float minValue, float maxValue, int nBits);
JVECTOR_SIMD_API float   nvq_square_l2_distance_8bit(const float* vector, const unsigned char* quantized, size_t length, float alpha, float x0, float minValue, float maxValue);