jvector-native/src/main/java/io/github/jbellis/jvector/vector/cnative/NativeSimdOps.java


    /**
     * {@snippet lang=c :
     * void calculate_partial_sums_euclidean_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, const float *query, int queryOffset, float *partialSums)
     * }
     */
    public static void calculate_partial_sums_euclidean_f32(MemorySegment codebook, int codebookIndex, long size, int clusterCount, MemorySegment query, int queryOffset, MemorySegment partialSums) {
        var mh$ = calculate_partial_sums_euclidean_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("calculate_partial_sums_euclidean_f32", codebook, codebookIndex, size, clusterCount, query, queryOffset, partialSums);
            }
            mh$.invokeExact(codebook, codebookIndex, size, clusterCount, query, queryOffset, partialSums);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class calculate_partial_sums_self_magnitude_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_INT,
            NativeSimdOps.C_POINTER
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("calculate_partial_sums_self_magnitude_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void calculate_partial_sums_self_magnitude_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, float *partialSums)
     * }
     */
    public static FunctionDescriptor calculate_partial_sums_self_magnitude_f32$descriptor() {
        return calculate_partial_sums_self_magnitude_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void calculate_partial_sums_self_magnitude_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, float *partialSums)
     * }
     */
    public static MethodHandle calculate_partial_sums_self_magnitude_f32$handle() {
        return calculate_partial_sums_self_magnitude_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void calculate_partial_sums_self_magnitude_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, float *partialSums)
     * }
     */
    public static MemorySegment calculate_partial_sums_self_magnitude_f32$address() {
        return calculate_partial_sums_self_magnitude_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void calculate_partial_sums_self_magnitude_f32(const float *codebook, int codebookIndex, size_t size, int clusterCount, float *partialSums)
     * }
     */
    public static void calculate_partial_sums_self_magnitude_f32(MemorySegment codebook, int codebookIndex, long size, int clusterCount, MemorySegment partialSums) {
        var mh$ = calculate_partial_sums_self_magnitude_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("calculate_partial_sums_self_magnitude_f32", codebook, codebookIndex, size, clusterCount, partialSums);
            }
            mh$.invokeExact(codebook, codebookIndex, size, clusterCount, partialSums);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class nvq_quantize_8bit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("nvq_quantize_8bit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void nvq_quantize_8bit(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, unsigned char *destination)
     * }
     */
    public static FunctionDescriptor nvq_quantize_8bit$descriptor() {
        return nvq_quantize_8bit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void nvq_quantize_8bit(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, unsigned char *destination)
     * }
     */
    public static MethodHandle nvq_quantize_8bit$handle() {
        return nvq_quantize_8bit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void nvq_quantize_8bit(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, unsigned char *destination)
     * }
     */
    public static MemorySegment nvq_quantize_8bit$address() {
        return nvq_quantize_8bit.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void nvq_quantize_8bit(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, unsigned char *destination)
     * }
     */
    public static void nvq_quantize_8bit(MemorySegment vector, long length, float alpha, float x0, float minValue, float maxValue, MemorySegment destination) {
        var mh$ = nvq_quantize_8bit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("nvq_quantize_8bit", vector, length, alpha, x0, minValue, maxValue, destination);
            }
            mh$.invokeExact(vector, length, alpha, x0, minValue, maxValue, destination);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class nvq_loss {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_INT
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("nvq_loss");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float nvq_loss(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, int nBits)
     * }
     */
    public static FunctionDescriptor nvq_loss$descriptor() {
        return nvq_loss.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float nvq_loss(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, int nBits)
     * }
     */
    public static MethodHandle nvq_loss$handle() {
        return nvq_loss.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float nvq_loss(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, int nBits)
     * }
     */
    public static MemorySegment nvq_loss$address() {
        return nvq_loss.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float nvq_loss(const float *vector, size_t length, float alpha, float x0, float minValue, float maxValue, int nBits)
     * }
     */
    public static float nvq_loss(MemorySegment vector, long length, float alpha, float x0, float minValue, float maxValue, int nBits) {
        var mh$ = nvq_loss.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("nvq_loss", vector, length, alpha, x0, minValue, maxValue, nBits);
            }
            return (float)mh$.invokeExact(vector, length, alpha, x0, minValue, maxValue, nBits);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class nvq_uniform_loss {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_INT
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("nvq_uniform_loss");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float nvq_uniform_loss(const float *vector, size_t length, float minValue, float maxValue, int nBits)
     * }
     */
    public static FunctionDescriptor nvq_uniform_loss$descriptor() {
        return nvq_uniform_loss.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float nvq_uniform_loss(const float *vector, size_t length, float minValue, float maxValue, int nBits)
     * }
     */
    public static MethodHandle nvq_uniform_loss$handle() {
        return nvq_uniform_loss.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float nvq_uniform_loss(const float *vector, size_t length, float minValue, float maxValue, int nBits)
     * }
     */
    public static MemorySegment nvq_uniform_loss$address() {
        return nvq_uniform_loss.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float nvq_uniform_loss(const float *vector, size_t length, float minValue, float maxValue, int nBits)
     * }
     */
    public static float nvq_uniform_loss(MemorySegment vector, long length, float minValue, float maxValue, int nBits) {
        var mh$ = nvq_uniform_loss.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("nvq_uniform_loss", vector, length, minValue, maxValue, nBits);
            }
            return (float)mh$.invokeExact(vector, length, minValue, maxValue, nBits);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class nvq_square_l2_distance_8bit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("nvq_square_l2_distance_8bit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float nvq_square_l2_distance_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static FunctionDescriptor nvq_square_l2_distance_8bit$descriptor() {
        return nvq_square_l2_distance_8bit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float nvq_square_l2_distance_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static MethodHandle nvq_square_l2_distance_8bit$handle() {
        return nvq_square_l2_distance_8bit.HANDLE;
    }
